Bug 400741 - Properties explorer disappears
Summary: Properties explorer disappears
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-06 13:10 UTC by uwestoehr
Modified: 2019-02-14 08:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments
screenshot of the problem (225.33 KB, image/jpeg)
2018-11-06 13:10 UTC, uwestoehr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2018-11-06 13:10:48 UTC
Created attachment 116122 [details]
screenshot of the problem

- start LabPlot 2.6
- click in the toolbar on the button "Properties Explorer" to suppress its view
- now click the button again to make the explorer visible again

result: there is only a white and empty field shown instead of the explorer
Comment 1 Alexander Semke 2018-11-06 14:52:52 UTC
This is most probably caused by the animation we added for the dock widgets. We'll switch it off since it causing some other problems, too.
Comment 2 uwestoehr 2018-11-09 02:41:55 UTC
This problem is still in 2.6.0RC2.

I found a workaround: Just click in the project explorer and the properties explorer becomes visible immediately.

So it seems to be a simple signal problem for the Qt widget for the toolbar button. I mean the bug does not appear for the project explorer toolbar button.

> This is most probably caused by the animation we added for the dock widgets.

I don't think this is the problem but nevertheless I don't see why e.g. hiding a dock widget must be animated. Therefore please remove this if it could make problems.
Comment 3 Alexander Semke 2019-02-14 08:03:36 UTC
Git commit 08c3b899ffcbb1bca5a104a1479cb3e11a3c899c by Alexander Semke.
Committed on 14/02/2019 at 08:02.
Pushed by asemke into branch 'master'.

Deactivate the animation of the toggling of dock widgets for a moment since it produces unwanted remnants on the MDI area.
FIXED-IN: 2.6

M  +10   -5    src/kdefrontend/MainWin.cpp
M  +2    -2    src/kdefrontend/MainWin.h

https://commits.kde.org/labplot/08c3b899ffcbb1bca5a104a1479cb3e11a3c899c