Deactivate the animation of the toggling of dock widgets for a moment since it produces unwanted remnants on the MDI area.

BUG: 400741
FIXED-IN: 2.6